# repo-evolution-pipeline

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  index.html  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs-link-check.yml  mlc_config.json
data/: manifests.example.json
docs/: README.md  faq.md
docs/api/: endpoints.md
docs/architecture/: agent-team-model.md  pipeline-overview.md
docs/configuration/: environment-variables.md
docs/deployment/: local-dev.md  production.md
docs/getting-started/: local-setup.md  quickstart-api.md  quickstart-cli.md
docs/operations/: quality-gates-and-verification.md  runbook.md
docs/plans/: 2026-03-13-repo-evolution-pipeline-upgrades.md  2026-03-22-agentic-pipeline-upgrade-plan.md
pipeline/: __main__.py
pipeline/agents/: analyzer.py  architect.py  ci_templates.py  codegen.py  pusher.py  repair.py  scanner.py
pipeline/api/: __init__.py  server.py
pipeline/core/: config.py  context.py  event_bus.py  llm.py  logging.py  models.py  orchestrator.py  stages.py  telemetry.py
pipeline/monitoring/: dashboard.py
pipeline/quality/: gates.py  verifier.py
pipeline/tests/: conftest.py  test_api_run_overrides.py  test_architect.py  test_config.py  test_context_manager.py  test_llm_tokens.py  test_models.py  test_pusher.py  test_quality.py  test_repair.py  test_scanner.py  test_security_gates.py  test_stages.py  (+2 more)
(+4 files in other folders)
