[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-evolution-pipeline"
version = "2.0.0"
description = "AI-powered pipeline for evolving web repositories into mobile-ready frameworks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "PyGithub>=2.1.0",
    "python-gitlab>=4.2.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "asyncio-throttle>=1.0.0",
    "jinja2>=3.1.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "typer>=0.12.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pyright>=1.1.0",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.10"
strict = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
disallow_any_generics = false
warn_return_any = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]
